#ifndef GAMEWIDGET_H
#define GAMEWIDGET_H

#include <QWidget>

namespace Ui {
class GameWidget;
}

class GameWidget : public QWidget
{
    Q_OBJECT

public:
    explicit GameWidget(QWidget *parent = nullptr);
    ~GameWidget();
    void paintEvent(QPaintEvent *e);

private:
    Ui::GameWidget *ui;
};

#endif // GAMEWIDGET_H
